# yggdrasil-vanity

./: .gitignore  Cargo.toml  LICENSE  build.rs  flake.nix
kernel/: curve25519.cl  entry.cl  sha512.cl  sha512.cu
src/: cpu.rs  cuda.rs  gpu.rs  handler.rs  main.rs
