[package]
name = "yggdrasil-vanity"
version = "0.1.0"
edition = "2021"
description = "Vanity address generator for the Yggdrasil network"
authors = ["Alexander Averyanov <alex@averyan.ru>"]
readme = "README.md"
repository = "https://github.com/averyanalex/yggdrasil-vanity"
license = "BSD-2-Clause"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
rand = "0.8.5"
hex = "0.4.3"
cust = "0.3.2"
regex = "1.10.5"
rayon = "1.10.0"
chrono = "0.4.38"
ed25519-dalek = "2.0.0-rc.3"
